Fixed: Search suggestion popout was clipped on mobile

--- a/mastodon/app/javascript/styles/tangerineui-purple/layout-single-column.scss
+++ b/mastodon/app/javascript/styles/tangerineui-purple/layout-single-column.scss
@@ -251,6 +251,9 @@ body.layout-single-column  {
     flex: unset;
     height: auto;
 }
+.layout-single-column .columns-area--mobile .column:focus-within {
+    overflow: visible;
+}
 .layout-single-column .scrollable,
 .layout-single-column .column > .scrollable {
     max-height: max-content;
